--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.sass-cache
-/js/*.map
-/css/*.map
+*.map
 /js/*.src.coffee
 _pawa_tmp/
 /codewave_py
 /codewave-py
 /node_modules
 /npm-debug.log
+/js/vendors/emmet.js
