--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "codewave",
   "version": "0.1.0",
   "devDependencies": {
+    "chai": "^2.3.0",
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha": "^0.4.12",
+    "mocha": "^2.2.4"
   }
 }
