--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
   "name": "codewave",
-  "version": "0.1.0",
+  "version": "0.2.0",
+  "description": "Codewave : The text editor helper.",
+  "scripts": {
+    "test": "gulp test",
+    "build": "gulp build",
+    "build-debug": "node --inspect-brk ./node_modules/gulp/bin/gulp build",
+    "test-debug": "gulp test-debug"
+  },
+  "main": "js/codewave.js",
+  "author": "kevthunder",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/kevthunder/codewave.git"
+  },
   "devDependencies": {
-    "chai": "^2.3.0",
-    "grunt": "^0.4.5",
-    "grunt-contrib-coffee": "^0.13.0",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.10.1",
-    "karma": "^0.12.31",
-    "karma-chai": "^0.1.0",
-    "karma-coverage": "^0.3.1",
-    "karma-mocha": "^0.1.10",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "mocha": "^2.2.5"
+    "chai": "^4.1",
+    "gulp": "^4.0",
+    "gulp-coffee": "^3.0.2",
+    "gulp-mocha": "^6.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-uglify-es": "^1.0.4",
+    "mocha": "^5.2.0",
+    "source-map-support": "^0.5.9"
   }
 }
