--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "url": "git://github.com/kevthunder/codewave.git"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
     "chai": "^4.1",
     "gulp": "^4.0",
     "gulp-coffee": "^3.0.2",
@@ -24,6 +28,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify-es": "^1.0.4",
     "mocha": "^5.2.0",
-    "source-map-support": "^0.5.9"
+    "source-map-support": "^0.5.9",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
