--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/preset-env": "^7.4.4",
     "babelify": "^10.0.0",
     "browserify": "^16.2.3",
     "chai": "^4.1",
