--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "gulp test",
     "build": "gulp build",
     "build-debug": "node --inspect-brk ./node_modules/gulp/bin/gulp build",
-    "test-debug": "gulp test-debug"
+    "test-debug": "gulp test-debug",
+    "lint": "eslint '**/*.js'",
+    "lint-fix": "eslint --fix '**/*.js'"
   },
   "main": "lib/bootstrap.js",
   "author": "kevthunder",
@@ -22,6 +24,14 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "chai": "^4.1",
+    "eslint": "^6.6.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-chai-friendly": "^0.5.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-mocha": "^6.2.1",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
