--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "chai": "^4.1",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-chai-friendly": "^0.5.0",
